fix national median wrapping

--- a/_sass/base/components/_legend.scss
+++ b/_sass/base/components/_legend.scss
@@ -35,5 +35,6 @@ $nat_average-height: 25px;
 
 .legend-nat_average-words {
   padding-top: 3px;
+  width: 200px;
   padding-left: ($nat_average-height * 1.1);
 }
